[gd_scene load_steps=46 format=2]

[ext_resource path="res://scripts/Particles2D.gd" type="Script" id=1]
[ext_resource path="res://scenes/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Node2D.gd" type="Script" id=3]
[ext_resource path="res://scenes/minibutton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=5]
[ext_resource path="res://mainbg.tscn" type="PackedScene" id=6]
[ext_resource path="res://mainbg.gd" type="Script" id=7]
[ext_resource path="res://scenes/AnimatedSprite.gd" type="Script" id=8]
[ext_resource path="res://duckie.png" type="Texture" id=9]
[ext_resource path="res://menu.png" type="Texture" id=10]
[ext_resource path="res://addons/onscreenkeyboard/onscreen_keyboard.gd" type="Script" id=11]
[ext_resource path="res://scripts/volslider.gd" type="Script" id=12]
[ext_resource path="res://up.png" type="Texture" id=13]
[ext_resource path="res://scripts/button.gd" type="Script" id=14]
[ext_resource path="res://back.png" type="Texture" id=15]

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;
uniform float clip:hint_range(0, 1) =1 ;
void fragment(){
	COLOR=texture(TEXTURE,UV);
	if (UV.y>clip) {
		COLOR.a=0.0
}}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/clip = 0.25

[sub_resource type="GDScript" id=20]
script/source = "extends button


func _ready():
	connect(\"pressed\",self,\"cred\")
	pass

func cred():
	get_parent().add_child(load(\"res://scenes/credits.tscn\").instance())
	
"

[sub_resource type="CircleShape2D" id=8]
radius = 15.0

[sub_resource type="Curve" id=1]
min_value = -360.0
max_value = 360.0

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.0444444, 0.733333, 1 )
colors = PoolColorArray( 1, 0.870117, 0, 1, 0.45098, 0.247059, 0, 1, 0.45098, 0.247059, 0, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
max_value = 30.0
_data = [ Vector2( 0, 13.8957 ), 0.0, 0.0, 0, 0, Vector2( 0.231308, 30 ), 0.0, 0.0, 0, 0, Vector2( 1, 3.95706 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
angle_curve = SubResource( 2 )
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=15]
LineEdit/styles/normal = SubResource( 14 )

[sub_resource type="Animation" id=16]
resource_name = "close"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/clip")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.032352, 0.203063 ),
"update": 0,
"values": [ 1.0, 0.25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button2:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("button3:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("singleplayer:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextEdit:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("button8:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TouchScreenButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
resource_name = "open"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/clip")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.203063, 0.032352 ),
"update": 0,
"values": [ 0.25, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button2:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("button3:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("singleplayer:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextEdit:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TouchScreenButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("button8:enabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=21]
resource_name = "reset"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/clip")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.032352 ),
"update": 0,
"values": [ 0.25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button2:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("button3:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("singleplayer:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextEdit:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("button8:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TouchScreenButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 192.214, 20 )

[sub_resource type="StyleBoxLine" id=22]
color = Color( 0.372549, 0.223529, 0, 1 )
thickness = 10

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0, 0.701961, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.00392157, 0.454902, 0, 1 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 128, 12.5 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 28, 28 )

[sub_resource type="GDScript" id=26]
script/source = "extends Node2D
export var list=[\"player\",\"playerupsidedown\"]
var index=0
onready var tween=$\"../Tween\"
func _ready():
	var path=loadskin()
	for e in range(list.size()):
		if \"res://players/\"+list[e]+\".tscn\"==path:
			index=e
	index()
func index():
	index=index%list.size()
	addplayer()
	save(\"res://players/\"+list[index]+\".tscn\")
	
func addplayer():
	for e in get_children():
		e.queue_free()
	var player=load(\"res://players/\"+list[index]+\".tscn\").instance()
	player=player.get_node(\"Sprite/Sprite\")
	player.position=Vector2.ZERO
	player.get_parent().remove_child(player)
	add_child(player)
	
func _on_custombutton_pressed():
	index-=1
	index()
	pass # Replace with function body.


func _on_custombutton2_pressed():
	index+=1
	index()
	pass # Replace with function body.

func save(content):
	var file = File.new()
	file.open(\"user://skin.dat\", File.WRITE)
	file.store_string(content)
	file.close()

func loadskin():
	var file = File.new()
	file.open(\"user://skin.dat\", File.READ)
	var content = file.get_as_text()
	file.close()
	return content
"

[sub_resource type="RectangleShape2D" id=27]

[sub_resource type="GDScript" id=29]
resource_name = "skins"
script/source = "extends button
onready var tween=$\"../Tween\"
func _ready():
	connect(\"pressed\",self,\"pressed\")
func pressed():
	tween.interpolate_property($\"../Camera2D\",\"position:x\",0,1024,0.3,Tween.TRANS_CUBIC,Tween.EASE_IN_OUT)
	tween.start()
"

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 30, 30 )

[sub_resource type="GDScript" id=30]
resource_name = "back"
script/source = "extends button
onready var tween=$\"../Tween\"
func _ready():
	connect(\"pressed\",self,\"pressed\")
func pressed():
	tween.interpolate_property($\"../Camera2D\",\"position:x\",1024,0,0.3,Tween.TRANS_CUBIC,Tween.EASE_IN_OUT)
	tween.start()
"

[node name="mainmenu" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 13 )
position = Vector2( 512, 300 )
texture = ExtResource( 10 )

[node name="button" parent="." instance=ExtResource( 2 )]
position = Vector2( 625, 146 )
scale = Vector2( 1.448, 2.082 )
text = "play"
color = Color( 1, 0.772549, 0, 1 )
white = false

[node name="button2" parent="." instance=ExtResource( 2 )]
position = Vector2( 113, 347 )
scale = Vector2( 0.719, 1.5 )
text = "create server (multiplayer)"
color = Color( 1, 0.772549, 0, 1 )
white = false
enabled = false

[node name="button3" parent="." instance=ExtResource( 2 )]
position = Vector2( 314, 352 )
scale = Vector2( 0.702, 1.5 )
text = "join server (multiplayer)"
color = Color( 1, 0.772549, 0, 1 )
white = false
enabled = false

[node name="button8" parent="." instance=ExtResource( 2 )]
position = Vector2( 539, 322 )
rotation = 1.5708
scale = Vector2( 0.705, 2.05 )
script = SubResource( 20 )
enabled = false

[node name="cursor" type="Area2D" parent="."]
position = Vector2( 595, 269 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cursor"]
shape = SubResource( 8 )

[node name="singleplayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 125, 250 )
scale = Vector2( 2.008, 2.082 )
text = "play on map2.0"
color = Color( 0.258824, 0.972549, 0, 1 )
white = false
enabled = false

[node name="button7" parent="." instance=ExtResource( 2 )]
position = Vector2( 127, 149 )
scale = Vector2( 2.008, 2.082 )
text = "play on map2.0"
color = Color( 0.258824, 0.972549, 0, 1 )
white = false

[node name="button5" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 935, 554 )
text = "settings"
enabled = false

[node name="button6" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 47, 553 )
text = "get tileset here"
enabled = false

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 595, 269 )
z_index = 1
amount = 120
lifetime = 0.35
local_coords = false
draw_order = 1
process_material = SubResource( 7 )
script = ExtResource( 1 )

[node name="map2" parent="." instance=ExtResource( 6 )]
position = Vector2( -260, -142 )
z_index = -2
script = ExtResource( 7 )

[node name="AnimatedSprite28" type="AnimatedSprite" parent="."]
position = Vector2( -494, -274 )
scale = Vector2( 3, 3 )
frames = SubResource( 11 )
frame = 1
playing = true
script = ExtResource( 8 )

[node name="OnscreenKeyboard" type="PanelContainer" parent="."]
margin_left = 592.0
margin_top = 658.0
margin_right = 1021.0
margin_bottom = 1045.0
script = ExtResource( 11 )
autoShow = false
customLayoutFile = "res://addons/onscreenkeyboard/keyboard_layout_num.json"

[node name="TextEdit" type="LineEdit" parent="."]
visible = false
margin_left = 105.0
margin_top = 423.0
margin_right = 470.0
margin_bottom = 469.0
hint_tooltip = "ip here"
theme = SubResource( 15 )
text = "127.0.0.1"
align = 1
virtual_keyboard_enabled = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "reset"
anims/close = SubResource( 16 )
anims/open = SubResource( 17 )
anims/reset = SubResource( 21 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 98, 425 )
shape = SubResource( 18 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 386.0
margin_top = 572.0
margin_right = 638.0
margin_bottom = 588.0
custom_styles/slider = SubResource( 22 )
custom_styles/grabber_area_highlight = SubResource( 24 )
custom_styles/grabber_area = SubResource( 23 )
max_value = 1.0
step = 0.01
value = 0.5

[node name="Area2D" type="Area2D" parent="HSlider"]
position = Vector2( 127, 8 )
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HSlider/Area2D"]
shape = SubResource( 19 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="skinmenu" type="Node2D" parent="."]
position = Vector2( 1024, 0 )

[node name="custombutton" type="Area2D" parent="skinmenu"]
position = Vector2( 388, 288 )
script = ExtResource( 14 )
invisible = false
canchangelooks = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="skinmenu/custombutton"]
shape = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="skinmenu/custombutton/CollisionShape2D"]
rotation = -1.5708
scale = Vector2( 6, 6 )
texture = ExtResource( 13 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="skinmenu/custombutton"]

[node name="custombutton2" type="Area2D" parent="skinmenu"]
position = Vector2( 634, 288 )
script = ExtResource( 14 )
invisible = false
canchangelooks = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="skinmenu/custombutton2"]
rotation = -3.14159
shape = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="skinmenu/custombutton2/CollisionShape2D"]
rotation = -1.5708
scale = Vector2( 6, 6 )
texture = ExtResource( 13 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="skinmenu/custombutton2"]

[node name="Node2D" type="Node2D" parent="skinmenu"]
position = Vector2( 512, 288 )
scale = Vector2( 2, 2 )
script = SubResource( 26 )

[node name="cursor" type="Area2D" parent="skinmenu"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="skinmenu/cursor"]
shape = SubResource( 27 )

[node name="Camera2D" type="Camera2D" parent="skinmenu"]
anchor_mode = 0

[node name="Tween" type="Tween" parent="."]

[node name="button4" type="Area2D" parent="."]
position = Vector2( 958, 553 )
script = SubResource( 29 )
invisible = false
canchangelooks = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="button4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="button4"]
shape = SubResource( 28 )

[node name="Sprite" type="Sprite" parent="button4"]
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 9 )
hframes = 4
vframes = 4

[node name="button9" type="Area2D" parent="."]
position = Vector2( 1066, 52 )
script = SubResource( 30 )
invisible = false
canchangelooks = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="button9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="button9"]
shape = SubResource( 28 )

[node name="Sprite" type="Sprite" parent="button9"]
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 15 )

[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="button2" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="button3" to="." method="_on_button3_pressed"]
[connection signal="pressed" from="singleplayer" to="." method="_on_button4_pressed"]
[connection signal="pressed" from="button7" to="." method="_on_button7_pressed"]
[connection signal="pressed" from="button5" to="." method="_on_button5_pressed"]
[connection signal="pressed" from="button6" to="." method="_on_button6_pressed"]
[connection signal="focus_entered" from="TextEdit" to="." method="_on_TextEdit_focus_entered"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="skinmenu/custombutton" to="skinmenu/Node2D" method="_on_custombutton_pressed"]
[connection signal="pressed" from="skinmenu/custombutton2" to="skinmenu/Node2D" method="_on_custombutton2_pressed"]
